--- a/assets/css/responsividade.css
+++ b/assets/css/responsividade.css
@@ -82,13 +82,6 @@
 	gap: 1.5rem;
     
     }
-
-    .left-sobre {
-        color: var(--color-white);
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-      }
       
       #conteudo-sobre-02 {
         flex-direction: row;
@@ -97,7 +90,7 @@
       .textos-sobre, 
       .textos-sobre-2, .textos-sobre> span,
       .textos-sobre-2 > span {
-          font-size: 2.5rem;
+          font-size: 2rem;
       }
       
       .textos-sobre > span {
@@ -116,13 +109,13 @@
       .textos-sobre-2 {
         color: #e4ded7;
       }
-      .textos-sobre-2 > p > span {
+      .textos-sobre-2 > span {
         font-weight: 900;
       }
       .img-sobre,
       .img-sobre-02 {
-        width: 90%;
-	height: auto;
+        width: 80%;
+	      height: auto;
       }
       
       .img-sobre-02 {
@@ -191,6 +184,11 @@
       }
     .menu, .menu-aberto {
         display: none;
+    }
+
+    .footer-direitos {
+      flex-direction: row;
+      ;
     }
 }
 
