--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -252,13 +252,13 @@ body {
 .inicio {
   width: 100%;	
   height: 80vh;
-  background-image: url('../img/bg-vertical.webp');  
+  background-image: url('../img/bg-vertical-md-darken.webp');  
   background-attachment: fixed;
-  background-size: 110%;
-  background-position: center;
+  background-size: 135%;
+  background-position: center top;
   background-repeat: no-repeat;
   align-items: flex-end;
-  margin-top: 5rem;
+   margin-top: 5rem;
   justify-content: flex-start;
 }
 
@@ -270,14 +270,13 @@ body {
   margin: 0;
 }
 .conteudo-inicio {
-  width: 90%;
+  width: 85%;
   height: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
-  margin-top: 1.25rem;
 }
 
 .paragrafo-inicio {
@@ -523,22 +522,22 @@ body {
   flex-direction: column;
   gap: 1rem;
   justify-content: center;
-  padding: 1rem;
 }
 .social-links a {
   font-size: clamp(1rem, 2rem, 5vw);
-  display: inline-flex;
+  display: flex;
   align-items: center;
   transition: color 0.3s;
 }
 .social-links li {
   text-align: left;
 }
-.social-links a i {
-  font-size: clamp(2rem, 3rem, 5vw);
-  margin-right: 1rem;
-  color: #c99e67;
+.social-links a svg {
+  width: clamp(25px, 35px, 45px);
+  margin-right: .85rem;
+  fill: #c99e67;
 }
+#localizacao-rodape svg {width: 40px}
 .footer-direitos {
   display: flex;
   flex-direction: column;
@@ -548,8 +547,8 @@ body {
   text-align: center;
 }
 .footer-botoes-b {
-  width: 40px;
-  height: 40px;
+  width: 50px;
+  height: 50px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -562,22 +561,18 @@ body {
 }
 #backToTop {
   display: flex;
-  width: 50px;
-  height: 50px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 #whatsappButton {
-  display: flex;
-  width: 50px;
-  height: 50px;
   background-color: #25d366;
   box-shadow: 0 0 10px rgba(0, 255, 0, 0.5);
   animation: 2s infinite pulse;
   transform-origin: center;
 }
-#whatsappButton i {
-  font-size: 24px;
-  color: #fff;
+#whatsappButton svg {
+  width: 32px;
+  height: 32px;
+  fill: #fff;
 }
 
 #desenvolvido-por {
