--- a/assets/css/responsividade.css
+++ b/assets/css/responsividade.css
@@ -11,6 +11,8 @@
     #conteudo-sobre-02 {
         flex-direction: row;
       }
+      .servicos-cards {display: flex;}
+      .slider-wrapper {display: none;}
 }
 @media (min-width: 768px) and (max-width: 1023px){
   .inicio {
@@ -25,6 +27,8 @@
   #conteudo-sobre-02 {
       flex-direction: row;
     }
+    .servicos-cards {display: flex;}
+    .slider-wrapper {display: none;}
 }
 @media (min-width: 1024px) {
 	.logo {display: flex;}
@@ -84,10 +88,8 @@
       .img-sobre-02 {
         width: 80%;
       }
-	#whatsappButton {}
-      #whatsappButton svg {
-        
-      }
+      .servicos-cards {display: flex;}
+      .slider-wrapper {display: none;}
     .menu, .menu-aberto {
         display: none;
     }
