--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -411,7 +411,7 @@ body {
 .servicos-cards {
   width: 100%;
   height: auto;
-  display: flex;  
+  display: none;  
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
@@ -563,6 +563,9 @@ body {
   display: flex;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
+#backToTop svg {
+  width: 32px;
+}
 #whatsappButton {
   background-color: #25d366;
   box-shadow: 0 0 10px rgba(0, 255, 0, 0.5);
@@ -685,5 +688,84 @@ body {
     position: relative;
 }
 
+
+.slider-wrapper {
+  width: 100%;
+  height: auto;
+  margin: 1rem;
+  position: relative;
+  overflow: hidden;
+}
+
+.slides-container {
+  width: 100%;
+  height: auto;
+  display: flex;
+  overflow: scroll;
+  scroll-behavior: smooth;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.slide-arrow {
+  position: absolute;
+  display: flex;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  height: 3rem;
+  background-color: white;
+  border: none;
+  width: 1.5rem;
+  font-size: 2.25rem;
+  padding: 0;
+  cursor: pointer;
+  opacity: 0.5;
+  transition: opacity 100ms;
+}
+
+.slide-arrow:hover,
+.slide-arrow:focus {
+  opacity: 1;
+}
+
+#slide-arrow-prev {
+  left: 0;
+  padding-left: 0.25rem;
+  border-radius: 0 2rem 2rem 0;
+}
+
+#slide-arrow-next {
+  right: 0;
+  padding-left: 0.75rem;
+  border-radius: 2rem 0 0 2rem;
+}
+
+.slide {
+  width: 100%;
+  height: auto;
+  flex: 1 0 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* .slide:nth-child(1) {
+  background-color: #49b293;
+}
+
+.slide:nth-child(2) {
+  background-color: #b03532;
+}
+
+.slide:nth-child(3) {
+  background-color: #6a478f;
+  margin: 0;
+}
+
+.slide:nth-child(4) {
+  background-color: #da6f2b;
+} */
 
 
